updating index file

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <script src="js/custom.js"></script>
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light col-12">
+  <!--  <nav class="navbar navbar-expand-md navbar-light bg-light col-12">
         <div class="row">
             <a class="navbar-brand" href="#">
                 <img src="images/My-Fitness-Guide.PNG" alt="" class="img img-fluid" style="height: 50px;width : 200px">
@@ -37,11 +37,6 @@
               <a class="nav-link mx-auto" href="#"><img src="images/icons8-calculator-100.png" alt="" class="img img-fluid icons"> 
             </li>
           </ul> 
-                <!-- <li class="">
-                    <a class="nav-link nav-item " href="#"><img src="images/meal-plans.png" alt=""
-                            class="img img-fluid icons">
-
-                    </li>
                 <li class="">
                     <a class="nav-link nav-item " href="#"><img src="images/meal-plans.png" alt=""
                             class="img img-fluid icons">
@@ -57,7 +52,12 @@
                             class="img img-fluid icons">
 
                     </li>
-            </ul> -->
+                <li class="">
+                    <a class="nav-link nav-item " href="#"><img src="images/meal-plans.png" alt=""
+                            class="img img-fluid icons">
+
+                    </li>
+            </ul> 
 
 
                 <button class="btn nav-item btn-outline-success my-2 my-sm-0" type="submit">Log in</button>
@@ -77,12 +77,70 @@
             <img src="..." class="d-block w-100" alt="...">
           </div>
         </div>
-      </div> -->
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      </div>
+     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a href="#" class="navbar-brand">
             <img src="images/My-Fitness-Guide.PNG" class="logo" alt="">
         </a>
-    </nav> 
+    </nav>--> 
+    <nav class="navbar navbar-expand-md navbar-light bg-light col-12 justify-content-md-start">
+      <div class="col-md-2 col-sm-2">
+          <a class="navbar-brand" href="#">
+              <img src="images/My-Fitness-Guide.PNG" alt="" class="" style="height: 50px;width : 200px">
+          </a>
+      </div>
+      <div class="col-md-2 col-sm-2"></div>
+      <div class=" col-lg-4 col-md-5 col-sm-5  icons-row ">
+          <ul>
+              <li class="" >
+                  <a class="" href="#"  onmouseover="showHeartset()" onmouseleave="hideHeartset()">
+                      <img src="images/heartset.png" id="heartset" alt=""  class="img img-fluid icons" >
+                  </a>
+              </li>
+              <li class="">
+                  <a class="" href="#">
+                      <img src="images/mindset.png" alt="" class="img img-fluid icons">
+                  </a>
+              </li>
+              <li>
+                  <a class="" href="#">
+                      <img src="images/meal-plans.png" alt="" class="img img-fluid icons">
+                  </a>
+              </li>
+              <li>
+                  <a class="" href="#">
+                      <img src="images/calories.png" alt="" class="img img-fluid icons">
+                  </a>
+              </li>
+          </ul>
+          <!-- <div class="bg-primary">
+              
+          </div>
+          <div class=" bg-primary">
+              <a class="" href="#">
+                  <img src="images/meal-plans.png" alt="" class="img img-fluid icons">
+              </a>
+          </div>
+          <div class=" bg-primary">
+              <a class="" href="#">
+                  <img src="images/meal-plans.png" alt="" class="img img-fluid icons">
+              </a>
+          </div>
+          <div class="bg-primary">
+              <a class="" href="#">
+                  <img src="images/meal-plans.png" alt="" class="img img-fluid icons">
+              </a>
+          </div>    -->
+      </div>
+      <!-- <div class="col-md-1 col-sm-1 "></div> -->
+      <div class="container justify-content-end" id="login">
+          <button class="btn nav-item btn-outline-success my-2 my-sm-0" type="submit">Log in</button>
+      </div>
+      <button class="navbar-toggler" type="button" >
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      
+   </nav>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.js"></script>
