adding abbr to calculator

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                     </li>
                     <li>
                         <a class="" href="#">
+                            <abbr title="Calculator">
                             <img src="images/calories.png" alt="" class="img img-fluid icons">
+
+                            </abbr>
                         </a>
                     </li>
                 </ul>
