fix hamburger issue

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <div class="row">
-        <nav class="navbar navbar-expand-md navbar-light bg-light col-12 justify-content-md-start">
+    <div class="row" id="navbar">
+        <nav class="navbar navbar-expand-md navbar-light bg-light col-12 justify-content-md-start menu" >
             <div class="col-md-2 col-sm-2 navbar-brand">
                 <a class="navbar-brand" href="#">
                     <img src="images/My-Fitness-Guide.PNG" alt="" class="" style="height: 50px;width : 200px">
