adjusting mobile view

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/custom.js"></script>
-    <title></title>
+    <title>Myfitnessguide.com Your fitness destination</title>
 
 </head>
 
 <body>
     <div class="row" id="navbar">
-        <nav class="navbar navbar-expand-md navbar-light bg-light col-12 justify-content-md-start menu" >
+        <nav class="navbar navbar-expand-md  fixed-top navbar-light bg-light col-12 justify-content-md-start menu" style="background-color: #e3f2fd;">
             <div class="col-md-2 col-sm-2 navbar-brand">
                 <a class="navbar-brand" href="#">
                     <img src="images/My-Fitness-Guide.PNG" alt="" class="" style="height: 50px;width : 200px">
@@ -81,10 +81,35 @@
             <div class="container justify-content-end" id="login">
                 <button class="btn nav-item btn-outline-success my-2 my-sm-0" type="submit">Log in</button>
             </div>
-            <button class="navbar-toggler justify-content-end" type="button" id="hamburger">
+            <button class="navbar-toggler justify-content-end" type="button" id="hamburger" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+            <div class="collapse navbar-collapse  text-white " id="navbarTogglerDemo02">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 navbar-list">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#" style="color : rgb(27, 27, 27)">Heartset<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color : rgb(27, 27, 27)">Mindset <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color : rgb(27, 27, 27)">Diet plans <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color : rgb(27, 27, 27)">Calculator <span class="sr-only">(current)</span></a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form> -->
+              </div>
         </nav>
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" id="myCarousel" style="width:100%">
@@ -95,11 +120,11 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 
         </ol>
-        <div class="carousel-inner" style="width:100%">
+        <div class="carousel-inner" style="width:100%;margin-top : 60px">
             
             
             <div class="carousel-item active" style="width:100%">
-                <img class="d-block w-100 g img-fluid" src="images/healthy-diet.png" alt="Third slide"
+                <img class="d-block w-100 g img-fluid carousel-img" src="images/healthy-diet.png" alt="Third slide"
                     style="width:100%">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>healthy-diet</h5>
@@ -107,21 +132,21 @@
                 </div>
             </div>
             <div class="carousel-item" style="width:100%">
-                <img class="d-block w-100 g img-fluid" src="images/mind.png" alt="Fourth slide" style="width:100%">
+                <img class="d-block w-100 g img-fluid carousel-img" src="images/mind.png" alt="Fourth slide" style="width:100%">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>mind</h5>
                     <p>mind</p>
                 </div>
             </div>
             <div class="carousel-item " style="width:100%">
-                <img class="d-block w-100 g img-fluid" src="images/health.png" alt="Second slide" style="width:100%">
+                <img class="d-block w-100 g img-fluid carousel-img" src="images/health.png" alt="Second slide" style="width:100%">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>health</h5>
                     <p>health</p>
                 </div>
             </div>
             <div class="carousel-item " style="width:100%">
-                    <img class="d-block w-100 img img-fluid" src="images/habit.png" alt="First slide" style="width:100%">
+                    <img class="d-block w-100 img img-fluid carousel-img" src="images/habit.png" alt="First slide" style="width:100%">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Make habit</h5>
                         <p>habit</p>
