Adding images for small screens in index page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <div class="row" id="navbar" style="background: #e6f0ff">
         <nav class="navbar navbar-expand-md  fixed-top navbar-light bg-light col-12 justify-content-md-start menu"
             style="background-color: #e3f2fd;">
@@ -106,6 +107,7 @@
             </div>
         </nav>
     </div>
+    <!-- Carousel -->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" id="myCarousel" style="width:100%">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -118,7 +120,7 @@
 
 
             <div class="carousel-item active" style="width:100%">
-                <img class="d-block w-100 g img-fluid carousel-img" src="images/healthy-diet.png" alt="Third slide"
+                <img class="d-block w-100 img-fluid carousel-img" src="images/healthy-diet.png" srcset="images/healthy-diet-small.jpg 500w" alt="Third slide"
                     style="width:100%">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>healthy-diet</h5>
@@ -126,7 +128,7 @@
                 </div>
             </div>
             <div class="carousel-item" style="width:100%">
-                <img class="d-block w-100 g img-fluid carousel-img" src="images/mind.png" alt="Fourth slide"
+                <img class="d-block w-100 img-fluid carousel-img" src="images/mind.png" srcset="images/mind-small.jpg 500w" alt="Fourth slide"
                     style="width:100%">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>mind</h5>
@@ -134,7 +136,8 @@
                 </div>
             </div>
             <div class="carousel-item " style="width:100%">
-                <img class="d-block w-100 g img-fluid carousel-img" src="images/health.png" alt="Second slide"
+                
+                <img class="d-block w-100 img-fluid carousel-img" src="images/health.png" srcset="images/health-small.jpg 500w"  alt="Second slide"
                     style="width:100%">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>health</h5>
@@ -142,7 +145,7 @@
                 </div>
             </div>
             <div class="carousel-item " style="width:100%">
-                <img class="d-block w-100 img img-fluid carousel-img" src="images/habit.png" alt="First slide"
+                <img class="d-block w-100 img img-fluid carousel-img" src="images/habit.png" srcset="images/habit-small.jpg 500w"  alt="First slide"
                     style="width:100%">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Make habit</h5>
@@ -161,6 +164,7 @@
     </div>
     <br />
     <br />
+    <!-- Cards -->
     <div class="container">
         <div class="row">
             <div class="card-deck" id="deck">
@@ -221,6 +225,7 @@
         </div>
     </div>
     <br />
+    <!-- Footer -->
     <div class="container-fluid footer text-center">
         <div class="row  bg-dark text-white">
             <h6 class="text-center d-block mx-auto">Copyright &copy; 2019 myfitnessguide.com. All rights reserved </h6>
