Adding habit formation in header

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     </li>
                     <li>
                         <a class="" href="#">
-                            <abbr title="Meal Plans">
-                                <img src="images/meal-plans.png" alt="" class="img img-fluid icons">
+                            <abbr title="Habit formation">
+                                <img src="images/habit.jpg" alt="" class="img img-fluid icons">
                             </abbr>
                         </a>
                     </li>
